2004-11-15  Harri Porten  <porten@kde.org>

	* edit.cpp (DialWidget): increased max length of callback number

2004-07-11  Harri Porten  <porten@kde.org>

	* kpppwidget.cpp: to save some screen space: show the modem combo
	box only if more than one modem has been set up.

	* general.cpp (ModemWidget): fixed name label of modem dialog

2004-05-28  Harri Porten  <porten@kde.org>

	* devices.h: added /dev/ttyS4 as requested by Christopher Martin for
	PCI hardware modem in 2.6 kernels (#82345)

	* general.cpp: made modem combo box read-only again. Editing device
	names didn't really work (#82345).

2004-05-19  Harri Porten  <porten@kde.org>

	* modem.cpp: fixed flow control for non-English users. Bug found by
	Elias Jahn (#73646).

2004-05-14  Simone Gotti  <simone.gotti@email.it>
	* Now kppp has the multiple modem profile features, so it finally 
	can manage a lot of modems and not only one! 
	It can use the old kppp config copying the [Modem] group to the 
	[Modem0] group if it doesn't already exists.
	See Bugs: #52028 

2004-04-24  Harri Porten  <porten@kde.org>

	* connect.cpp: added patch by Dmitri that allows automatic redials
	on NO CARRIER.

	* provide automatic CBCP (Windows) callback support. Patch by Nick
	Shafff.

2004-04-12  Gerardo Puga  <gpuga@gioia.ing.unlp.edu.ar>

	* Now kppp will notify other applications using DCOP about 
	  connection status changes.

2004-01-07  Harri Porten  <porten@kde.org>

	* modem.cpp: fix a bug in writing of modem commands. EAGAIN errors
	were not handled. Thanks to Matteo Croce who helped tracking this
	down.
	
2003-12-13  Harri Porten  <porten@kde.org>

	* edit.cpp: disallow colons in connection name. breaks the loginfo
	format

2003-07-16  Harri Porten  <porten@froglogic.com>

	* connect.cpp: Digital Line Protection (DLP) support contributed
	by Dorian Araneda <dorian.araneda at intel.com>

2003-02-18  Harri Porten  <porten@kde.org>

	* added keyboard accelerators, layout fix (patch from
	Mikolaj Machowski)
