@@ -1273,8 +1273,11 @@ bool ConnectWidget::execppp() {
   if(gpppdata.subnetmask() != "0.0.0.0")
     command += " netmask " + gpppdata.subnetmask();
 
-  if(gpppdata.flowcontrol() != "None") {
-    if(gpppdata.flowcontrol() == "CRTSCTS")
+  // the english/i18n mix below is ugly but we want to keep working
+  // after someone changed the code to use i18n'ed config values
+  QString flowCtrl = gpppdata.flowcontrol();
+  if(flowCtrl != "None" || flowCtrl != i18n("None")) {
+    if(flowCtrl == "CRTSCTS" || flowCtrl == i18n("Hardware [CRTSCTS]"))
       command += " crtscts";
     else
       command += " xonxoff";
