@@ -1,3 +1,9 @@
+2005-03-18  Harri Porten  <porten@kde.org>
+
+	* connect.cpp: fixed another occurence of a i18n bug with the flow
+	control setting as reported by Brendon Higgins in #95502. Will surely
+	fix some connection problems.
+
 2004-11-15  Harri Porten  <porten@kde.org>
 
 	* edit.cpp (DialWidget): increased max length of callback number
